# mygpt2

./: .gitignore  A100_TRAINING_PLAN.md  PLATFORM_DESIGN.md  PROJECT_PLAN.md  README.md  compare.py  eval.py  eval_results.json  finetune.py  pyproject.toml  train_a100.py  train_sft_gpu.py
cuda/: 01_vector_add  01_vector_add.cu  02_matmul  02_matmul.cu  03_softmax  03_softmax.cu  04_layernorm  04_layernorm.cu  05_gelu  05_gelu.cu  06_attention  06_attention.cu  07_embedding  07_embedding.cu  libengine.cu
docs/: PROJECT_PLAN.md  TROUBLESHOOTING_DPO_MODE_COLLAPSE.md  TROUBLESHOOTING_EVAL_PERFORMANCE.md  llm_study_template.md  math_formulas_phase1_2_3.md  perplexity_scorer_plan.md
engine/: __init__.py  agent.py  alignment.py  autograd.py  cuda_backend.py  data.py  load_checkpoint.py  lora.py  memory.py  nn.py  optim.py  protocol.py  quantize.py  server.py  sp_tokenizer.py  ticketing_agent.py  tokenizer.py  tools.py  trainer.py  transformer.py
