[project]
name = "testmy01"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "sentencepiece",
    "numpy",
    "datasets",
    "huggingface-hub",
    "anthropic>=0.101.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["engine"]

# RTX 2070 GPU 학습용 — CPU로 되돌리려면 이 블록 전체를 삭제
[tool.uv.sources]
torch = [
  { index = "pytorch-cu126" }
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true  # 이 인덱스는 torch 전용 (다른 패키지엔 적용 안 됨)
